@@ -402,7 +402,7 @@ define("tinymce/html/Schema", [
 		textInlineElementsMap = createLookupTable('text_inline_elements', 'span strong b em i font strike u var cite ' +
 		'dfn code mark q sup sub samp');
 
-		each((settings.special || 'script noscript style textarea').split(' '), function(name) {
+		each((settings.special || 'script noscript iframe noframes noembed title style textarea xmp').split(' '), function(name) {
 			specialElements[name] = new RegExp('<\/' + name + '[^>]*>', 'gi');
 		});
 
